--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,6 @@
 DEPLOY_USER=praktikum
 DEPLOY_HOST=89.169.141.196
 DEPLOY_PATH=/home/praktikum/web-plus-pm2-deploy/frontend
-DEPLOY_REF=master
+DEPLOY_REF=origin/master
 DEPLOY_REPO=https://github.com/Shahtarov/web-plus-pm2-deploy.git
 DEPLOY_FOLDER=/frontend
