--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,4 +3,4 @@ DEPLOY_HOST=89.169.141.196
 DEPLOY_PATH=/home/praktikum/web-plus-pm2-deploy/backend
 DEPLOY_REF=origin/master
 DEPLOY_REPO=https://github.com/Shahtarov/web-plus-pm2-deploy.git
-DEPLOY_FOLDER=backend/
+DEPLOY_FOLDER=/web-plus-pm2-deploy/backend
